--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -2,7 +2,9 @@
   <div class="container">
     <div class="about-us-container">
       <div class="about-us-content">
-        <h2 class="about-us-title">Найкраща компанія для роботи в IT</h2>
+        <h2 class="about-us-title" id="about-us">
+          Найкраща компанія для роботи в IT
+        </h2>
         <div class="text-container">
           <p class="about-us-secondaty-title">
             <b
