--- a/src/partials/charity.html
+++ b/src/partials/charity.html
@@ -1,7 +1,7 @@
 <section class="charity-page">
   <div class="container">
     <div class="charity-container">
-      <h3 class="charity-title">Благодійність</h3>
+      <h3 class="charity-title" id="charity">Благодійність</h3>
       <div class="charity-content">
         <div class="charity-wrapper">
           <p class="charity-wrapper-title">
@@ -50,7 +50,7 @@
           <li class="project-item">
             <button class="project-btn">
               <div class="project-content">
-                <svg class="icon-project" width="80" height="80">
+                <svg class="icon-project icon-emblem" width="80" height="80">
                   <use href="./images/sprite.svg#icon-emblem"></use>
                 </svg>
                 <p class="project-title"><b>Допомога ЗСУ</b></p>
