--- a/src/partials/drupal.html
+++ b/src/partials/drupal.html
@@ -1,7 +1,7 @@
 <section class="drupal-page">
   <div class="container">
     <div class="drupal-page-container">
-      <h3 class="drupal-page-title">Наш вклад в Drupal</h3>
+      <h3 class="drupal-page-title" id="drupal">Наш вклад в Drupal</h3>
       <ul class="our-drupal-project list">
         <li class="our-drupal-project-item">
           <div class="drupal-project-content">
