--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer-page">
   <div class="container">
-    <div class="footer-container">
+    <div class="footer-container" id="footer">
       <div class="text-wrapper">
         <svg class="icon-footer-logo" width="266" height="66">
           <use href="./images/sprite.svg#icon-footer-logo"></use>
@@ -43,7 +43,11 @@
                 </svg>
               </li>
               <li class="social-media-element">
-                <svg class="footer-social-media-icon" width="22" height="22">
+                <svg
+                  class="footer-social-media-icon icon-footer-instagram"
+                  width="22"
+                  height="22"
+                >
                   <use href="./images/sprite.svg#icon-footer-instagram"></use>
                 </svg>
               </li>
@@ -60,7 +64,7 @@
             </ul>
           </div>
 
-          <div>
+          <div class="address-wrapper">
             <p class="contacts-title"><b>Адреса нашого офісу</b></p>
             <ul class="address-list list">
               <li class="address-item">
@@ -70,7 +74,9 @@
                 </p>
               </li>
               <li class="address-item">
-                <p class="gps">GPS: 49.234384, 28.394405</p>
+                <p class="gps">
+                  GPS: <span class="gps-value">49.234384, 28.394405</span>
+                </p>
               </li>
             </ul>
           </div>
@@ -81,6 +87,7 @@
               <svg class="icon-ukraine-community" width="94" height="59">
                 <use href="./images/sprite.svg#icon-ukraine-community"></use>
               </svg>
+
               <svg
                 class="icon-footer-alternative-commerce"
                 width="196"
@@ -90,6 +97,7 @@
                   href="./images/sprite.svg#icon-footer-alternative-commerce"
                 ></use>
               </svg>
+
               <svg class="icon-footer-helpdesk-star" width="206" height="33">
                 <use href="./images/sprite.svg#icon-footer-helpdesk-star"></use>
               </svg>
