--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -24,7 +24,7 @@
 
     <div class="hero-arrow-scroll-down-wrapper">
       <a href="#why-us" class="hero-arrow-scroll-down-item link">
-        <span class="arrow-scroll-down-title">Дізнатися більше</span>
+        <span class="arrow-scroll-down-title"><b>Дізнатися більше</b></span>
         <button type="button" class="arrow-scroll-down-btn">
           <svg class="arrow-scroll-down-icon" width="18" height="28">
             <use href="./images/sprite.svg#icon-arrow-down"></use>
