--- a/src/partials/our-partners.html
+++ b/src/partials/our-partners.html
@@ -1,7 +1,7 @@
 <section class="our-partners-page">
   <div class="container">
     <div class="our-partners-container">
-      <h3 class="our-partners-title">З нами працюють:</h3>
+      <h3 class="our-partners-title" id="our-partners">З нами працюють:</h3>
       <div class="partners-wrapper">
         <ul class="partners-list list">
           <li class="partners-item">
@@ -14,15 +14,19 @@
           <li class="partners-item">
             <button class="partners-btn">
               <svg class="partners-logo" width="232" height="65.53">
-                <use href="./images/sprite.svg#icon-bravo-airway"></use>
+                <use href="./images/sprite.svg#icon-bravo-airways"></use>
               </svg>
             </button>
           </li>
           <li class="partners-item">
             <button class="partners-btn">
-              <svg class="partners-logo">
-                <use href="./images/sprite.svg#icon"></use>
-              </svg>
+              <img
+                class="partners-logo-pharmacy"
+                src="./images/our-partners.img/pharmacy-logo.jpg"
+                alt=""
+                width="232"
+                height="43"
+              />
             </button>
           </li>
           <li class="partners-item">
