--- a/src/css/header.css
+++ b/src/css/header.css
@@ -10,7 +10,7 @@
   padding: 0 16px 0 16px;
 }
 
-.logo-type-img {
+.header-logo {
   margin-right: 154px;
 }
 
@@ -51,6 +51,11 @@
   font-size: 16px;
   line-height: 20px;
   color: var(--primary-text-color-theme-light);
+}
+
+.anchor-wrapper {
+  display: flex;
+  align-items: center;
 }
 
 .contacts-tel-link {
