--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,14 +11,14 @@
         <div class="hero-btn-container">
           <button type="button" class="hero-btn">Спробуй свої сили</button>
         </div>
+        <div class="interface-style-circle-middle"></div>
       </div>
 
       <div class="hero-img">
-        <div class="hero-img-container">
-          <svg class="basic-img" width="667" height="654">
-            <use href="./images/sprite.svg#icon-hero-img"></use>
-          </svg>
-        </div>
+        <div class="interface-style-circle-smallest"></div>
+        <svg class="basic-img" width="667" height="654">
+          <use href="./images/sprite.svg#icon-hero-img"></use>
+        </svg>
       </div>
     </div>
 
