--- a/src/partials/our-advantages.html
+++ b/src/partials/our-advantages.html
@@ -7,180 +7,195 @@
           <svg class="icon-logo-our-company" wigth="131" height="136">
             <use href="./images/sprite.svg#icon-logo-our-company"></use>
           </svg>
+
+          <ul class="advantages-list list">
+            <li class="advantages-item advantages-time left">
+              <div class="circle-icon-time circle-style"></div>
+              <div class="advantages-text left-side">
+                <h3 class="advantages-wrapper-title">Зручний графік</h3>
+                <p>
+                  Ми розуміємо, що кожна людина має унікальні потреби та
+                  обставини, тому пропонуємо гнучкий режим роботи, який враховує
+                  <b>індивідуальні вимоги</b> та дозволяє пристосуватися до них.
+                </p>
+              </div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-time" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-time"></use>
+                </svg>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-location left">
+              <div class="circle-icon-location circle-style"></div>
+              <div class="advantages-text left-side">
+                <h3 class="advantages-wrapper-title">Комфортний графік</h3>
+                <p>
+                  Для співробітників є комфортні
+                  <b>робочі місця і зручні зони відпочинку</b>, що сприяють
+                  розслабленню та відновленню енергії. Використовуємо
+                  <b>Starlink</b>, тому завжди на звʼязку.
+                </p>
+              </div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-location" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-location"></use>
+                </svg>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-software-developer left">
+              <div class="circle-icon-software-developer circle-style"></div>
+              <div class="advantages-text left-side">
+                <h3 class="advantages-wrapper-title">Швидкий розвиток</h3>
+                <p>
+                  За короткий проміжок часу ти
+                  <b>стаєш повноцінним веброзробником</b> і тобі не важливо що
+                  то буде за макет, ти зможеш реалізувати все!
+                </p>
+              </div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-software-developer" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-software-developer"></use>
+                </svg>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-atom left">
+              <div class="circle-icon-atom circle-style"></div>
+              <div class="advantages-text left-side">
+                <h3 class="advantages-wrapper-title">Можливості Drupal</h3>
+                <p>
+                  Завдяки Drupal ви можете створити
+                  <b>будь-який тип веб-сайту</b>, від лендінгу до соціальної
+                  мережі, і отримати <b>повноцінну професію</b>, що дозволить
+                  вам працювати як в складі компанії, так і окремо як фрілансер.
+                </p>
+              </div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-atom" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-atom"></use>
+                </svg>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-meeting left">
+              <div class="circle-icon-metting circle-style"></div>
+              <div class="advantages-text left-side">
+                <h3 class="advantages-wrapper-title">Навички та підтримка</h3>
+                <p>
+                  Працюючи у нас ти будеш працювати з препроцесорами,
+                  шаблонізаторами, різними бібліотеками, Doker, Git і з усім цим
+                  ми
+                  <b>тобі допоможемо розібратися</b> і дамо можливість
+                  <b>свої знання сповна реалізувати.</b>
+                </p>
+              </div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-meeting" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-meeting"></use>
+                </svg>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-xbox">
+              <div class="circle-icon-xbox circle-style"></div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-xbox" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-xbox"></use>
+                </svg>
+              </div>
+              <div class="advantages-text right-side">
+                <h3 class="advantages-wrapper-title">Відпочинок та розваги</h3>
+                <p>
+                  Ми облаштували комфортні зони відпочинку на свіжому повітрі.
+                  Окрім цього, в офісі є <b>PlayStation та VR-окуляри,</b> тож
+                  під час перерв або після робочого дня завжди можна
+                  розважитися.
+                </p>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-workspace">
+              <div class="circle-icon-workspace circle-style"></div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-workspace" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-workspace"></use>
+                </svg>
+              </div>
+              <div class="advantages-text right-side">
+                <h3 class="advantages-wrapper-title">Сучасна техніка</h3>
+                <p>
+                  Ми забезпечуємо всіх виконавців
+                  <b>сучасною технікою від Apple.</b> Кожен співробітник отримує
+                  свій власний MacBook, що дозволяє працювати з надійним та
+                  потужним обладнанням, якісно виконувати будь-які поточні
+                  завдання.
+                </p>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-module">
+              <div class="circle-icon-module circle-style"></div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-module" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-module"></use>
+                </svg>
+              </div>
+              <div class="advantages-text right-side">
+                <h3 class="advantages-wrapper-title">Участь у стартапах</h3>
+                <p>
+                  У нашій компанії, яка налічує багато стартапів, ми надаємо
+                  учасникам розробки можливість <b>отримати відсоток</b> від
+                  прибутку. Також ти розберешся в Drupal API та зможеш писати
+                  <b>свої модулі.</b>
+                </p>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-client">
+              <div class="circle-icon-client circle-style"></div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-client" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-client"></use>
+                </svg>
+              </div>
+              <div class="advantages-text right-side">
+                <h3 class="advantages-wrapper-title">
+                  Постійний потік клієнтів
+                </h3>
+                <p>
+                  У нас потік <b>нових замовлень,</b> тому щоразу ти зможеш
+                  спробувати реалізувати щось нове
+                </p>
+              </div>
+            </li>
+
+            <li class="advantages-item advantages-accounts">
+              <div class="circle-icon-accounts circle-style"></div>
+              <div class="advantages-icon-wrapper">
+                <svg class="icon-accounts" width="40" height="40">
+                  <use href="./images/sprite.svg#icon-accounts"></use>
+                </svg>
+              </div>
+              <div class="advantages-text right-side">
+                <h3 class="advantages-wrapper-title">
+                  Постійне зростання надходжень
+                </h3>
+                <p>
+                  У нашій компанії ми працюємо над тим, щоб надходження
+                  <b>постійно зростали.</b> Наша мета — допомогти вам досягти
+                  фінансового успіху.
+                </p>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
 
-      <div class="advantages-wrapper">
-        <ul class="advantages-list list">
-          <li class="advantages-item advantages-time left">
-            <div class="advantages-text left-side">
-              <h3 class="advantages-wrapper-title">Зручний графік</h3>
-              <p>
-                Ми розуміємо, що кожна людина має унікальні потреби та
-                обставини, тому пропонуємо гнучкий режим роботи, який враховує
-                <b>індивідуальні вимоги</b> та дозволяє пристосуватися до них.
-              </p>
-            </div>
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-time" width="40" height="40">
-                <use href="./images/sprite.svg#icon-time"></use>
-              </svg>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-location left">
-            <div class="advantages-text left-side">
-              <h3 class="advantages-wrapper-title">Комфортний графік</h3>
-              <p>
-                Для співробітників є комфортні
-                <b>робочі місця і зручні зони відпочинку</b>, що сприяють
-                розслабленню та відновленню енергії. Використовуємо
-                <b>Starlink</b>, тому завжди на звʼязку.
-              </p>
-            </div>
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-location" width="40" height="40">
-                <use href="./images/sprite.svg#icon-location"></use>
-              </svg>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-software-developer left">
-            <div class="advantages-text left-side">
-              <h3 class="advantages-wrapper-title">Швидкий розвиток</h3>
-              <p>
-                За короткий проміжок часу ти
-                <b>стаєш повноцінним веброзробником</b> і тобі не важливо що то
-                буде за макет, ти зможеш реалізувати все!
-              </p>
-            </div>
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-software-developer" width="40" height="40">
-                <use href="./images/sprite.svg#icon-software-developer"></use>
-              </svg>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-atom left">
-            <div class="advantages-text left-side">
-              <h3 class="advantages-wrapper-title">Можливості Drupal</h3>
-              <p>
-                Завдяки Drupal ви можете створити
-                <b>будь-який тип веб-сайту</b>, від лендінгу до соціальної
-                мережі, і отримати <b>повноцінну професію</b>, що дозволить вам
-                працювати як в складі компанії, так і окремо як фрілансер.
-              </p>
-            </div>
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-atom" width="40" height="40">
-                <use href="./images/sprite.svg#icon-atom"></use>
-              </svg>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-meeting left">
-            <div class="advantages-text left-side">
-              <h3 class="advantages-wrapper-title">Навички та підтримка</h3>
-              <p>
-                Працюючи у нас ти будеш працювати з препроцесорами,
-                шаблонізаторами, різними бібліотеками, Doker, Git і з усім цим
-                ми
-                <b>тобі допоможемо розібратися</b> і дамо можливість
-                <b>свої знання сповна реалізувати.</b>
-              </p>
-            </div>
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-meeting" width="40" height="40">
-                <use href="./images/sprite.svg#icon-meeting"></use>
-              </svg>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-xbox">
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-xbox" width="40" height="40">
-                <use href="./images/sprite.svg#icon-xbox"></use>
-              </svg>
-            </div>
-            <div class="advantages-text right-side">
-              <h3 class="advantages-wrapper-title">Відпочинок та розваги</h3>
-              <p>
-                Ми облаштували комфортні зони відпочинку на свіжому повітрі.
-                Окрім цього, в офісі є <b>PlayStation та VR-окуляри,</b> тож під
-                час перерв або після робочого дня завжди можна розважитися.
-              </p>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-workspace">
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-workspace" width="40" height="40">
-                <use href="./images/sprite.svg#icon-workspace"></use>
-              </svg>
-            </div>
-            <div class="advantages-text right-side">
-              <h3 class="advantages-wrapper-title">Сучасна техніка</h3>
-              <p>
-                Ми забезпечуємо всіх виконавців
-                <b>сучасною технікою від Apple.</b> Кожен співробітник отримує
-                свій власний MacBook, що дозволяє працювати з надійним та
-                потужним обладнанням, якісно виконувати будь-які поточні
-                завдання.
-              </p>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-module">
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-module" width="40" height="40">
-                <use href="./images/sprite.svg#icon-module"></use>
-              </svg>
-            </div>
-            <div class="advantages-text right-side">
-              <h3 class="advantages-wrapper-title">Участь у стартапах</h3>
-              <p>
-                У нашій компанії, яка налічує багато стартапів, ми надаємо
-                учасникам розробки можливість <b>отримати відсоток</b> від
-                прибутку. Також ти розберешся в Drupal API та зможеш писати
-                <b>свої модулі.</b>
-              </p>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-client">
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-client" width="40" height="40">
-                <use href="./images/sprite.svg#icon-client"></use>
-              </svg>
-            </div>
-            <div class="advantages-text right-side">
-              <h3 class="advantages-wrapper-title">Постійний потік клієнтів</h3>
-              <p>
-                У нас потік <b>нових замовлень,</b> тому щоразу ти зможеш
-                спробувати реалізувати щось нове
-              </p>
-            </div>
-          </li>
-
-          <li class="advantages-item advantages-accounts">
-            <div class="advantages-icon-wrapper">
-              <svg class="icon-accounts" width="40" height="40">
-                <use href="./images/sprite.svg#icon-accounts"></use>
-              </svg>
-            </div>
-            <div class="advantages-text right-side">
-              <h3 class="advantages-wrapper-title">
-                Постійне зростання надходжень
-              </h3>
-              <p>
-                У нашій компанії ми працюємо над тим, щоб надходження
-                <b>постійно зростали.</b> Наша мета — допомогти вам досягти
-                фінансового успіху.
-              </p>
-            </div>
-          </li>
-        </ul>
-      </div>
+      <!-- <div class="advantages-wrapper">
+        
+      </div> -->
 
       <ul class="advantages-gallery list">
         <li class="gallery-item">
