--- a/src/partials/our-partners.html
+++ b/src/partials/our-partners.html
@@ -5,21 +5,21 @@
       <div class="partners-wrapper">
         <ul class="partners-list list">
           <li class="partners-item">
-            <button class="partners-btn">
+            <a class="partners-link">
               <svg class="partners-logo" width="138" height="100">
                 <use href="./images/sprite.svg#icon-toyota"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="partners-item">
-            <button class="partners-btn">
+            <a class="partners-link">
               <svg class="partners-logo" width="232" height="65.53">
                 <use href="./images/sprite.svg#icon-bravo-airways"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="partners-item">
-            <button class="partners-btn">
+            <a class="partners-link">
               <img
                 class="partners-logo-pharmacy"
                 src="./images/our-partners.img/pharmacy-logo.jpg"
@@ -27,28 +27,28 @@
                 width="232"
                 height="43"
               />
-            </button>
+            </a>
           </li>
           <li class="partners-item">
-            <button class="partners-btn">
+            <a class="partners-link">
               <svg class="partners-logo" width="232" height="48.7">
                 <use href="./images/sprite.svg#icon-gemix"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="partners-item">
-            <button class="partners-btn">
+            <a class="partners-link">
               <svg class="partners-logo" width="232" height="73.65">
                 <use href="./images/sprite.svg#icon-csd"></use>
               </svg>
-            </button>
+            </a>
           </li>
           <li class="partners-item">
-            <button class="partners-btn">
+            <a class="partners-link">
               <svg class="partners-logo" width="232" height="91.14">
                 <use href="./images/sprite.svg#icon-momentum"></use>
               </svg>
-            </button>
+            </a>
           </li>
         </ul>
       </div>
