--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 40px 30px 55px 0;
+  margin: 40px 30px 55px 75px;
 }
 
 .icon-footer-logo {
@@ -46,7 +46,7 @@
 .footer-contacts-wrapper {
   display: flex;
   justify-content: center;
-  margin: 50px 0 0 120px;
+  margin: 50px 75px 0 120px;
   gap: 140px;
 }
 
@@ -83,6 +83,10 @@
 }
 
 .icon-footer-instagram {
+  fill: #fff;
+}
+
+.icon-footer-twitter {
   fill: #fff;
 }
 
